@@ -15,6 +15,10 @@
 """Persistent storage of test results."""
 
 from cStringIO import StringIO
+try:
+    import anydbm as dbm
+except ImportError:
+    import dbm
 import errno
 import os.path
 import sys
@@ -120,12 +124,29 @@ class Repository(AbstractRepository):
     def _get_inserter(self, partial):
         return _Inserter(self, partial)
 
+    def _get_test_times(self, test_ids):
+        # May be too slow, but build and iterate.
+        # 'c' because an existing repo may be missing a file.
+        db = dbm.open(self._path('times.dbm'), 'c')
+        try:
+            result = {}
+            for test_id in test_ids:
+                duration = db.get(test_id, None)
+                if duration is not None:
+                    result[test_id] = float(duration)
+            return result
+        finally:
+            db.close()
+
+    def _path(self, suffix):
+        return os.path.join(self.base, suffix)
+
     def _write_next_stream(self, value):
         # Note that this is unlocked and not threadsafe : for now, shrug - single
         # user, repo-per-working-tree model makes this acceptable in the short
         # term. Likewise we don't fsync - this data isn't valuable enough to
         # force disk IO.
-        prefix = os.path.join(self.base, 'next-stream')
+        prefix = self._path('next-stream')
         stream = file(prefix + '.new', 'wb')
         try:
             stream.write('%d\n' % value)
@@ -151,11 +172,17 @@ class _DiskRun(AbstractTestRun):
 class _SafeInserter(TestProtocolClient):
 
     def __init__(self, repository, partial=False):
+        # XXX: Perhaps should factor into a decorator and use an unaltered
+        # TestProtocolClient.
         self._repository = repository
         fd, name = tempfile.mkstemp(dir=self._repository.base)
         self.fname = name
         stream = os.fdopen(fd, 'wb')
         self.partial = partial
+        # The time take by each test, flushed at the end.
+        self._times = {}
+        self._test_start = None
+        self._time = None
         TestProtocolClient.__init__(self, stream)
 
     def startTestRun(self):
@@ -168,12 +195,39 @@ class _SafeInserter(TestProtocolClient):
         run_id = self._name()
         os.rename(self.fname, os.path.join(self._repository.base,
             str(run_id)))
+        # May be too slow, but build and iterate.
+        db = dbm.open(self._repository._path('times.dbm'), 'c')
+        try:
+            db.update(self._times)
+        finally:
+            db.close()
         return run_id
 
     def _cancel(self):
         """Cancel an insertion."""
         self._stream.close()
         os.unlink(self.fname)
+
+    def startTest(self, test):
+        result = TestProtocolClient.startTest(self, test)
+        self._test_start = self._time
+        return result
+
+    def stopTest(self, test):
+        result = TestProtocolClient.stopTest(self, test)
+        if None in (self._test_start, self._time):
+            return result
+        duration_delta = self._time - self._test_start
+        duration_seconds = ((duration_delta.microseconds +
+            (duration_delta.seconds + duration_delta.days * 24 * 3600)
+            * 10**6) / 10**6)
+        self._times[test.id()] = str(duration_seconds)
+        return result
+
+    def time(self, timestamp):
+        result = TestProtocolClient.time(self, timestamp)
+        self._time = timestamp
+        return result
 
 
 class _FailingInserter(_SafeInserter):
